# needle

./: .bazelrc  .gitignore  .travis.yml  API.md  BUILD  BUILD.bazel  CONTRIBUTING.md  FOUNDATION_README.md  GENERATOR.md  Makefile  NOTICE.txt  Needle.podspec  NeedleFoundation.podspec  Package.resolved  Package.swift  README.md  RELEASE.md  WHY_DI.md  WORKSPACE  foundation.xcconfig
.github/workflows/: ci.yml  publish.yml
Documents/ko_KR/: API.md  FOUNDATION_README.md  GENERATOR.md  README.md  WHY_DI.md
Foundation/: Package.swift  README.md
Foundation/NeedleFoundation.xcodeproj/: project.pbxproj
Framework/: Package.swift
Framework/Tests/: LinuxMain.swift
Generator/: .gitignore  Package.swift  README.md  xcode.xcconfig
Generator/Needle.xcodeproj/: project.pbxproj
Generator/Tests/: LinuxMain.swift
Needle/: main.swift
Needle.xcodeproj/: project.pbxproj
Needle.xcworkspace/: contents.xcworkspacedata
NeedleFoundation.xcodeproj/: project.pbxproj
Sample/: Cartfile  Cartfile.resolved  README.md  carthage.sh  copyright_header.txt
Sample/MVC/: Cartfile  Cartfile.resolved
Sample/MVC-plain/: .gitignore  Cartfile  Cartfile.resolved
Sample/Pluginized/: Cartfile  Cartfile.resolved
Sample/SwiftUI-MVVM/: .gitignore
Sources/Needle/: main.swift
Sources/NeedleFoundation/: Bootstrap.swift  Component.swift  RootComponent.swift
Sources/NeedleFoundationTest/: BUILD  MockComponentPathBuilder.swift
Tests/NeedleFoundationTestTests/: BUILD  MockComponentPathBuilderTests.swift
Tools/: .gitignore  Cartfile  Cartfile.resolved  Package.swift  README.md
(+416 files in other folders)
